--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "jotai": "^2.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.14.1",
+    "zod": "^3.22.4"
   }
 }
